--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,10 @@
 @import "global";
 
 
+// =========== Blocks ============
+@import "blocks/header";
+// =========== Blocks ============
+
 
 
 @import "media";
