--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,9 +32,14 @@ body {
     min-width: 320px;
     overflow-x: hidden;
     position: relative;
-    background-color: #000;
+    background-color: #1a1a1a;
+    color: #303030;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
-    
+    width: 100%;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
