--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,7 @@
 
 // =========== Blocks ============
 @import "blocks/header";
+@import "blocks/header__links";
 // =========== Blocks ============
 
 
